force-app/main/default/objects/Subdivision__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>If this subdivision is no longer being monitored as part of this easement, please uncheck this box.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Create_Report_Date__c</fullName>
        <defaultValue>Today()+7</defaultValue>
        <description>Date to automatically create the next monitoring report. Field not visible on any layouts. Used by workflow and process to create monitoring reports.</description>
        <label>Create Report Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Create_Report__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to initiate the process to create reports on subdivisions.  Workflow will check the box on the create report date. Checking box will initiate the process.</description>
        <label>Create Report</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Monitoring_Date_Subdiv__c</fullName>
        <description>Last Date Subdivision was monitored and received a &quot;Approved&quot; Status. Used with DLRS of same name for data rollup into this field.</description>
        <inlineHelpText>Last Date Subdivision was monitored and received a &quot;Approved&quot; Status.</inlineHelpText>
        <label>Last Monitoring Date Subdiv</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Property_Contacts__c</fullName>
        <inlineHelpText>Property Contacts related specifically to this subdivision. This is a non-editable field rolled up from the property contacts that show as related to this subdivision. To add a subdivision contact go to the property contacts related list.</inlineHelpText>
        <label>Property Contacts</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Property_Interest__c</fullName>
        <inlineHelpText>Master property interest for this subdivision.</inlineHelpText>
        <label>Property Interest</label>
        <referenceTo>Property_Interest__c</referenceTo>
        <relationshipLabel>Subdivisions</relationshipLabel>
        <relationshipName>Subdivisions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Status_at_Last_Monitoring_Subdiv__c</fullName>
        <description>Status at last monitoring of each subdivision. Roll up of data created through DLRS Summary of same name.</description>
        <inlineHelpText>Status at last monitoring of each subdivision</inlineHelpText>
        <label>Status at Last Monitoring Subdiv</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subdivision_Notes__c</fullName>
        <inlineHelpText>Notes about this subdivision (boundaries, particularities, etc.)</inlineHelpText>
        <label>Subdivision Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Subdivision</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Property_Contacts__c</columns>
        <columns>Property_Interest__c</columns>
        <columns>Status_at_Last_Monitoring_Subdiv__c</columns>
        <columns>Subdivision_Notes__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Subdivision Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Subdivisions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>